# gluecodium

./: .clang-format  .gitignore  .gitignore-custom  .ort.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  build.gradle  generate  generate.bat  gradle.properties  here_java.license  settings.gradle
apps/: CMakeLists.txt
apps/android/: README.md
apps/android/HelloApplication/: build.gradle
apps/android/app/: build.gradle
apps/base_api/: CMakeLists.txt  README.md
apps/base_api/src/: main.cpp
apps/ios/: CMakeLists.txt
apps/ios/hello_swiftTests/: hello_swiftTests.swift
apps/ios/hello_swiftUITests/: hello_swiftUITests.swift
apps/ios/resources/: Package.swift.in  empty.c
examples/calculator/ios/: CMakeLists.txt  ContentView.swift  gluecodium_calculator_appApp.swift
examples/libhello/: CMakeLists.txt  README.md
functional-tests/: CMakeLists.txt  README.md  build.gradle  gradle.properties  settings.gradle
functional-tests/config/: .gitignore-custom  COPYRIGHT  dart.properties
functional-tests/functional/: CMakeLists.txt  build.gradle
functional-tests/functional/android/: build.gradle
functional-tests/functional/cpp/: CMakeLists.txt
functional-tests/functional/dart/: CMakeLists.txt  main.dart  pubspec.yaml.in
functional-tests/functional/swift/: XCTMain.swift  main.swift
functional-tests/namerules/: CMakeLists.txt  build.gradle
functional-tests/namerules/android/: .gitignore  build.gradle  settings.gradle
functional-tests/namerules/cpp/: NameRulesImpl.cpp
functional-tests/namerules/swift/: XCTMain.swift  main.swift
functional-tests/scripts/: build-android  build-android-functional  build-android-kotlin-functional  build-android-kotlin-namerules  build-android-namerules  build-cpp-functional  build-dart-functional  build-swift  build-swift-functional  build-swift-namerules  clean  inc.functions  valgrind_suppressions
libhello/: CMakeLists.txt  README.md
libhello/fidl/: HelloWorld.fdepl  HelloWorld.fidl  HelloWorldBuiltinTypes.fdepl  HelloWorldBuiltinTypes.fidl  HelloWorldComplexTypes.fdepl  HelloWorldFactory.fidl  HelloWorldInstances.fidl  HelloWorldPlainDataStructures.fidl  PlainDataStructuresTest.fdepl  PlainDataStructuresTest.fidl  StaticBooleanMethodsTest.fdepl  StaticByteArrayMethodsTest.fdepl  StaticFloatDoubleMethodsTest.fdepl  StaticFloatDoubleMethodsTest.fidl  StaticInt8MethodsTest.fdepl  StaticInt8MethodsTest.fidl  StaticIntMethodsTest.fdepl  StaticStringMethodsTest.fdepl  StaticStringMethodsTest.fidl  StaticUInt8MethodsTest.fdepl  StaticUInt8MethodsTest.fidl
libhello/fidl/common/: CommonTypes.fidl
libhello/fidl/hello/: CalculatorListener.fdepl  CalculatorListener.fidl  HelloWorld.fdepl  HelloWorldArrays.fdepl  HelloWorldArrays.fidl  HelloWorldAttributes.fidl  HelloWorldAttributesComplex.fidl  HelloWorldBuiltinTypes.fdepl  HelloWorldBuiltinTypes.fidl  HelloWorldCalculatorListenerFactory.fdepl  HelloWorldCalculatorListenerFactory.fidl  HelloWorldComplexTypes.fdepl  HelloWorldComplexTypes.fidl  HelloWorldDefaults.fdepl  HelloWorldDefaults.fidl  HelloWorldEnums.fdepl  HelloWorldEnums.fidl  HelloWorldErrors.fdepl  HelloWorldErrors.fidl  HelloWorldFactory.fdepl  HelloWorldFactory.fidl  HelloWorldInheritance.fdepl  HelloWorldInheritance.fidl  HelloWorldInstances.fidl  HelloWorldListeners.fdepl  HelloWorldListeners.fidl  HelloWorldMaps.fdepl  HelloWorldMaps.fidl  HelloWorldParcelable.fdepl  HelloWorldParcelable.fidl  HelloWorldPlainDataStructures.fdepl  HelloWorldPlainDataStructures.fidl  HelloWorldProfileManager.fidl  HelloWorldProfileManagerFactory.fdepl  HelloWorldProfileManagerFactory.fidl  HelloWorldStaticLogger.fdepl  HelloWorldStaticLogger.fidl  HelloWorldTypedefs.fdepl  HelloWorldTypedefs.fidl  HelloWorldUnions.fdepl  (+7 more)
libhello/fidl/test/: ArrayMethodOverloads.fdepl  ArrayMethodOverloads.fidl  Arrays.fdepl  Arrays.fidl  ArraysByteBuffer.fdepl  ArraysByteBuffer.fidl  ArraysMaps.fdepl  ArraysMaps.fidl  AttributesInterface.fdepl  AttributesInterface.fidl  AttributesInterfaceFactory.fdepl  AttributesInterfaceFactory.fidl  Circular.fidl  ComplexListeners.fdepl  ComplexListeners.fidl  Defaults.fdepl  Defaults.fidl  Enums.fdepl  Enums.fidl  EnumsTypeCollection.fdepl  EnumsTypeCollection.fidl  Errors.fdepl  Errors.fidl  Errors2.fidl  Inheritance.fdepl  Inheritance.fidl  Instances.fidl  InstancesFactory.fdepl  InstancesFactory.fidl  Interfaces.fdepl  Interfaces.fidl  ListenerInheritance.fdepl  ListenerInheritance.fidl  ListenerInheritanceArrays.fdepl  ListenerInheritanceArrays.fidl  ListenerWithMaps.fdepl  ListenerWithMaps.fidl  ListenersReturnValues.fdepl  ListenersReturnValues.fidl  Maps.fdepl  (+35 more)
libhello/inc/hello/: GeoLocation.h
libhello/include/hello/: config.h
libhello/scripts/: build.sh  install.sh
libhello/src/: GeoLocation.cpp  HelloWorldStub.cpp
libhello/src/hello/: Circle.cpp  CircleImpl.cpp  CircleImpl.h  HelloWorld.cpp  HelloWorldArrays.cpp  HelloWorldAttributesComplexImpl.cpp  HelloWorldAttributesComplexImpl.h  HelloWorldAttributesImpl.cpp  HelloWorldAttributesImpl.h  HelloWorldBuiltinTypes.cpp  HelloWorldBuiltinTypesStub.cpp  HelloWorldCalculatorListenerFactory.cpp  HelloWorldComplexTypes.cpp  HelloWorldComplexTypesStub.cpp  HelloWorldDefaults.cpp  HelloWorldEnums.cpp  HelloWorldErrors.cpp  HelloWorldFactory.cpp  HelloWorldInheritance.cpp  HelloWorldInheritanceChild.cpp  HelloWorldInheritanceParent.cpp  HelloWorldInstances.cpp  HelloWorldInstances.h  HelloWorldListeners.cpp  HelloWorldListeners.h  HelloWorldMaps.cpp  HelloWorldPlainDataStructures.cpp  HelloWorldPlainDataStructuresStub.cpp  HelloWorldProfileManager.cpp  HelloWorldProfileManager.h  HelloWorldProfileManagerFactory.cpp  HelloWorldStaticLogger.cpp  HelloWorldTypedefs.cpp  HelloWorldUnions.cpp  Rectangle.cpp  RectangleImpl.cpp  RectangleImpl.h  Square.cpp  SquareImpl.cpp  SquareImpl.h
libhello/src/test/: ArrayMethodOverloads.cpp  Arrays.cpp  ArraysByteBuffer.cpp  ArraysMaps.cpp  AttributesInterfaceFactory.cpp  AttributesInterfaceImpl.cpp  (+50 more)
test/generated-compile-test/: CMakeLists.txt  main.cpp
(+8925 files in other folders)
